# ri_mypy_introduction

./: README.md  pyproject.toml
python_none_problem/: bar.py  foo.py  foo_example.py
